# localstack-datafusionx

./: README.md
data-pipeline-localstack/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data-pipeline-localstack/dbt/: dbt_project.yml  profiles.yml
data-pipeline-localstack/dbt/models/marts/: customer_orders.sql
data-pipeline-localstack/dbt/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql
data-pipeline-localstack/glue_scripts/: iceberg_setup.py  process_with_iceberg.py
data-pipeline-localstack/localstack-data/cache/: license.json  machine.json  server.test.pem  server.test.pem.crt  server.test.pem.key
data-pipeline-localstack/localstack-data/cache/certs/ca/: LocalStack_LOCAL_Root_CA.crt  LocalStack_LOCAL_Root_CA.key.pem
data-pipeline-localstack/localstack-data/state/: api_states.json
data-pipeline-localstack/localstack-data/state/s3/: store.state
data-pipeline-localstack/notebooks/: data_analysis.ipynb
data-pipeline-localstack/scripts/: init.sh  setup_dms.py
