[tool.poetry]
name = "data-pipeline-localstack"
version = "0.1.0"
description = "Pipeline de dados com LocalStack, DMS, S3, Iceberg, Glue, dbt e Athena"
authors = ["Seu Nome <seu.email@exemplo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.0"
pandas = "^1.5.0"
pyathena = "^2.18.0"
pyiceberg = "^0.4.0"
matplotlib = "^3.6.0"
jupyter = "^1.0.0"
sqlalchemy = "^2.0.0"
pytest = "^7.0.0"
pytest-dbt-core = "^0.6.0"
dbt-core = "^1.3.0"
dbt-athena = "^1.3.0"
awscli-local = "^0.20.0"
localstack = {extras = ["full"], version = "^1.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-pipeline = "data_pipeline.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
